# coaxer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATIONS.md  README.md  justfile  mkdocs.yml  putitoutthere.toml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: bootstrap-npm.yml  build-js.yml  build.yml  changelog.yml  coverage.yml  docs.yml  lint-js.yml  lint.yml  migrations.yml  minor-release.yml  patch-release.yml  publish.yml  putitoutthere-check.yml  release-backfill.yml  release.yml  test-integration.yml  test-js.yml  test-unit.yml  test.yml  typecheck-js.yml  typecheck.yml
coaxer/: __init__.py  _diff_cover_probe.py  cli.py  cli_test.py  compiler.py  compiler_test.py  extract_prompt_test.py  for_query.py  for_query_test.py  lm.py  lm_test.py  load_predict.py  load_predict_test.py  openai_lm.py  openai_lm_test.py  prompt.py  prompt_test.py  query_assistant_text_test.py  records.py  records_test.py  resolve_field_type.py  resolve_field_type_test.py  schema.py  schema_test.py  signature.py  signature_test.py
coaxer/_internal/run_sync/: run_sync.py
coaxer/skills/optimize/: SKILL.md
coaxer/tui/: __init__.py  label_app.py
docs/: index.md  llms-full.md  migrations.md
docs/api/: agent-lm.md  cli.md  coax-prompt.md  coaxed-prompt.md  load-predict.md  openai-lm.md
docs/guide/: caching.md  getting-started.md  labeling-tui.md  optimize-skill.md
dspy_agent_sdk/: __init__.py  cli.py  extract_prompt.py  extract_prompt_test.py  for_query.py  for_query_test.py  lm.py  lm_test.py  load_predict.py  load_predict_test.py  query_assistant_text_test.py
dspy_agent_sdk/_internal/run_sync/: __init__.py
dspy_agent_sdk/skills/optimize/: SKILL.md
evals/: evals.json
evals/00-basic/: 001-file.yaml  002-command.yaml
evals/01-prepopulated/: 001-file.yaml  002-command.yaml
evals/02-reasoning-table-detail/: 001-file.yaml  002-command.yaml
evals/03-reasoning-before-table-only/: 001-file.yaml  002-command.yaml
evals/04-reasoning-after-detail-only/: 001-file.yaml  002-command.yaml
evals/05-multi-editable/: 001-file.yaml  002-command.yaml
evals/06-mixed-editable-noneditable/: 001-file.yaml  002-command.yaml
evals/07-large-label-set/: 001-file.yaml  002-command.yaml
evals/karat-large-label-set/: 001-file.yaml  002-command.yaml
evals/karat-mixed-editable-noneditable/: 001-file.yaml  002-command.yaml
evals/karat-multi-editable/: 001-file.yaml  002-command.yaml
evals/karat-prepopulated/: 001-file.yaml  002-command.yaml
evals/karat-reasoning-after-detail-only/: 001-file.yaml  002-command.yaml
evals/karat-reasoning-before-table-only/: 001-file.yaml  002-command.yaml
evals/karat-reasoning-table-detail/: 001-file.yaml  002-command.yaml
karat/: __init__.py  cli.py  dataclasses.py  extract_prompt.py  extract_prompt_test.py  for_query.py  for_query_test.py  lm.py  lm_test.py  load_predict.py  load_predict_test.py  openai_lm.py  openai_lm_test.py  query_assistant_text.py  query_assistant_text_test.py  tui.py
karat/_internal/run_sync/: has_running_loop.py
karat/skills/optimize/: SKILL.md
karat/tui/: __init__.py  label_app.py  label_app.tcss  label_app_test.py
notes/environments/: agents.md  remote.md
putitoutthere/: AGENTS.md
tests/__fixtures__/labels/demo/0002/: readme.md  record.json
tests/__fixtures__/labels/demo/0003/: record.json
tests/e2e/: anthropic_e2e_test.py  conftest.py  distilled_prompt_test.py  openai_e2e_test.py  sdk_error_test.py  tui_curtaincall_test.py  tui_test.py
tests/e2e/cli/: distill_test.py
tests/evals/: agent_produces_json_test.py  conftest.py  json_schema_test.py
tests/fixtures/labels/demo/: _schema.json
tests/fixtures/labels/demo/0001/: readme.md  record.json
tests/fixtures/labels/demo/0003/: readme.md
tests/integration/: agent_lm_prompt_test.py  cache_test.py  cli_test.py  gepa_test.py  openai_lm_prompt_test.py  pipeline_test.py  response_format_test.py  sdk_error_test.py  tui_test.py
