[project]
name = "coaxer"
dynamic = ["version"]
description = "Evals-first prompt optimization. Label examples, get better prompts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dspy>=2.6",
    "claude-agent-sdk",
    "textual>=3.0"
]

[project.optional-dependencies]
cache = [
    "cachetta>=0.6.0",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
dev = [
    "rust-just>=1.0",
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24",
    "pytest-describe>=2.0",
    "pytest-watcher>=0.4",
    "pre-commit>=4.0",
    "ty>=0.0.1a7",
    "cachetta>=0.6.0",
    "curtaincall>=0.3.0",
]

[project.scripts]
coaxer = "coaxer.cli:main"
karat = "karat.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["coaxer", "karat"]


[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "C90", "UP", "ARG", "SIM", "PTH", "PLR", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["PLR2004", "PLR0915", "C901", "ARG001"]
"tests/**/*.py" = ["PLR2004", "PLR0915", "C901", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["coaxer", "karat"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["coaxer", "tests"]
python_files = ["*_test.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["coaxer"]
branch = true
omit = ["*_test.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
